--- a/zeus_issues/WebContent/zeus/issues/index.html
+++ b/zeus_issues/WebContent/zeus/issues/index.html
@@ -31,7 +31,7 @@
   }
 </style>
 </head>
-<body>
+<body style="margin-left: 20px">
 <div ng-include="'header.html'"></div>
 
 	<div id="wrap" ng-controller="ManageController">
