--- a/zeus_issues/WebContent/zeus/issues/index.html
+++ b/zeus_issues/WebContent/zeus/issues/index.html
@@ -9,8 +9,8 @@
 
 <title>Issues</title>
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 <style>
 .selected-true {
 	background-color: #428bca;
@@ -46,8 +46,8 @@
 			<table class="table table-condensed">
 				<thead>
 					<tr>
-						<th>#</th>
 						<th>Name</th>
+						<th>No</th>
 						<th>Description</th>
 						<th>Author</th>
 						<th>Date</th>
@@ -59,14 +59,14 @@
 				<tbody>
 					<tr class="selected-{{entry._selected_}}" ng-repeat="entry in data"
 						ng-click="showInfoForEntry(entry)">
+						<td nowrap><i class="fa fa-bug"></i> {{entry.issue_name}}</td>
 						<td>{{entry.issue_id}}</td>
-						<td>{{entry.issue_name}}</td>
 						<td>{{entry.issue_description}}</td>
 						<td>{{entry.issue_author}}</td>
 						<td>{{entry.issue_date}}</td>
 						<td>{{entry.issue_assignee}}</td>
 						<td>{{entry.issue_project_id}}</td>
-						<td>{{entry.issue_status}}</td>
+						<td align=center>{{entry.issue_status}}</td>
 					</tr>
 				</tbody>
 			</table>
@@ -93,7 +93,7 @@
 			<div>
 				<!-- input form -->
 				<div>
-					<label>#</label>
+					<label>No</label>
 					<input type="text" class="form-control" 
 						ng-model="selectedEntry.issue_id" readonly> <br>
 					<br>
